[metadata]
name = toolbox
version = 0.1.0
author = Michael Wayne Goodman
description = Python implementation of SILs Toolbox Standard Format Markers (SFM) format.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/goodmami/toolbox
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
